<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.calpoly.jgunawan.plantinventory.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:id="@+id/scan"
        android:text="@string/scan"
        android:textSize="30sp"
        android:onClick="scanPlant"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:id="@+id/addPlant"
        android:text="@string/add_plant"
        android:textSize="30sp"
        android:onClick="addPlant"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:id="@+id/searchPlant"
        android:text="@string/search_plant"
        android:textSize="30sp"
        android:onClick="searchPlant"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:id="@+id/sendForm"
        android:text="@string/send_form"
        android:textSize="30sp"
        android:onClick="sendForm"/>

</LinearLayout>
