<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_plant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="edu.calpoly.jgunawan.plantinventory.AddPlantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addPlantLinearLayout"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:orientation="vertical">

        <!-- Botanical Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:src="@drawable/ic_flower"
                android:contentDescription="@string/botanical_name"
                android:id="@+id/addPlantNameImageView"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textSize="24sp"
                android:hint="@string/botanical_name"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/botanical_name"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/botanicalNameAddPlantEditText"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <!-- Common Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textSize="24sp"
                android:hint="@string/common_name"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/common_name"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/commonNameAddPlantEditText"
                android:inputType="textCapSentences"/>

        </LinearLayout>

        <!-- Size, Availability, and Saleable -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:src="@drawable/ic_ruler"
                android:contentDescription="@string/size"/>

            <!-- Size -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="24sp"
                android:hint="@string/size"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/size"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/sizeAddPlantEditText"
                android:inputType="textCapSentences"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"/>

            <!-- Availability -->
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="24sp"
                android:hint="@string/availability"
                android:id="@+id/availabilityAddPlantSpinner"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"/>

            <!-- Saleable -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/SalebableAddPlantTextView"
                    android:text="@string/saleable"
                    android:textSize="24sp"
                    android:gravity="center_vertical"
                    android:textColor="#A9A9A9"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_toRightOf="@id/SalebableAddPlantTextView"
                    android:layout_toEndOf="@id/SalebableAddPlantTextView"
                    android:id="@+id/saleableRowCheckBox"
                    android:layout_gravity="bottom"/>

            </RelativeLayout>

        </LinearLayout>

        <!-- Type and USDA Zone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <!-- Type -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="24sp"
                android:hint="@string/type"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/type"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/typeAddPlantEditText"
                android:inputType="textCapSentences"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"/>

            <!-- USDA Zone -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:textSize="24sp"
                android:hint="@string/min_usda_zone"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/min_usda_zone"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/minUSDAZoneAddPlantEditText"
                android:inputType="number"/>

        </LinearLayout>

        <!-- Notes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <!-- Notes -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textSize="24sp"
                android:hint="@string/notes"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/notes"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/notesAddPlantEditText"
                android:inputType="textCapSentences|textMultiLine"/>

        </LinearLayout>

        <!-- Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:src="@drawable/ic_map_marker"
                android:contentDescription="@string/location"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textSize="24sp"
                android:hint="@string/location"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/details"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/locationAddPlantEditText"
                android:inputType="textCapSentences|textMultiLine"/>

        </LinearLayout>

        <!-- Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:scaleType="fitStart"
                android:src="@drawable/ic_message_reply_text"
                android:contentDescription="@string/details"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textSize="24sp"
                android:hint="@string/details"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/details"
                app:met_floatingLabelTextSize="24sp"
                android:background="@drawable/plant_header"
                android:id="@+id/detailsAddPlantEditText"
                android:inputType="textCapSentences|textMultiLine"/>

        </LinearLayout>

        <!-- Save Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:visibility="invisible"
                android:clickable="false"
                android:paddingBottom="20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/saveButton"
                android:text="@string/add_plant"
                android:textSize="24sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:visibility="invisible"
                android:clickable="false"
                android:paddingBottom="20dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
